@@ -138,7 +138,8 @@ bytes.
 .B \-c \fIbytes
 limit core size.
 Limit the core file size to
-.I bytes bytes.
+.I bytes
+bytes.
 .TP
 .B \-v
 verbose.
